--- a/src/views/clinic-panel/pages/add-clinic/choose-address.ejs
+++ b/src/views/clinic-panel/pages/add-clinic/choose-address.ejs
@@ -65,11 +65,11 @@
             </div>
             <div class="form-group">
               <label for="center-about">Merkeziniz Hakkında</label>
-              <textarea class="form-control" id="bio" rows="3" name="bio" placeholder="<%- center.companyInformation.bio || "Hakkında" %>"></textarea>
+              <textarea class="form-control" id="bio" rows="3" name="bio" placeholder="Hakkında"><%- center.companyInformation.bio %></textarea>
             </div>
             <div class="tm-text-info">Merkezin sizin olduğunu doğrulayabilmemiz için bu bilgilerin doğru ve eksiksiz girildiğinden emin olun.</div>
             <div class="tm-button-next left">
-              <a href="./clinic-details.html">
+              <a href="/panel/company-information">
                 <button type="button" class="btn btn-outline-secondary">
                   <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="#025c91" class="bi bi-chevron-left" viewBox="0 0 16 16">
                     <path fill-rule="evenodd" d="M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z" />
