--- a/src/views/clinic-panel/pages/add-clinic/choose-center.ejs
+++ b/src/views/clinic-panel/pages/add-clinic/choose-center.ejs
@@ -25,21 +25,24 @@
       <div class="tm-section-title">Merkezinizin Adı Nedir?</div>
       <div class="row">
         <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6">
-          <form class="tm-form-wide" action="/panel/company-information" method="POST">
+          <form class="tm-form-wide" action="/panel/choose-center-get-clinic-list" method="POST" onkeydown="return event.key != 'Enter';">
             <div class="form-group">
               <label for="center-name">Merkezin Adını Girin</label>
-              <input type="text" class="form-control" id="center-name" placeholder="Türk" />
+              <input type="text" class="form-control" id="companyName" name="companyName" placeholder="Şirket adını giriniz" />
             </div>
+          </form>
+
+          <% if (list != undefined ) { %>
+          <form class="tm-form-wide" action="/panel/company-information" method="POST">
+            <% if (list.length > 0) { %> <% list.forEach(element => { %>
             <div class="tm-text-info">Aşağıda yer alan merkezlerden tam eşleşeni seçiniz.</div>
-            <% if (list.length > 0) { %> 
-              <% list.forEach(element => { %>
-              <div class="form-group checkbox">
-                <input class="form-check-input" name="companyId" type="checkbox" value="<%- element._id %>" id="<%- element._id %>" />
-                <label class="form-check-label" for="flexCheckChecked"> <%- element.companyInformation.companyName %> </label>
-              </div>
-              <% }) %>
-             <% } %>
-            <div class="tm-button-next left">
+            <div class="form-group checkbox">
+              <input class="form-check-input" name="companyId" type="checkbox" value="<%- element._id %>" id="<%- element._id %>" />
+              <label class="form-check-label" for="flexCheckChecked"> <%- element.companyInformation.companyName %> </label>
+            </div>
+
+            <% }) %>
+                        <div class="tm-button-next left">
               <a href="/panel/choose-personel"
                 ><button type="button" class="btn btn-outline-secondary">
                   <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="#025c91" class="bi bi-chevron-left" viewBox="0 0 16 16">
@@ -48,7 +51,12 @@
               ></a>
               <button type="submit" class="btn btn-secondary mx-2">Sonraki Adım</button>
             </div>
+            <% } else { %>
+            <div class="tm-text-info">Girdiğiniz isimle kayıtlı merkez bulunmamaktadır. Yeni diyaliz merkezi kaydı için tıklayınız..</div>
+             
+            <% } %> 
           </form>
+          <% } %>
         </div>
         <div class="col-sm-12 col-md-12 col-lg-4 col-xl-4">
           <div class="tm-box-info">
