--- a/src/views/clinic-panel/pages/add-clinic/clinic-services.ejs
+++ b/src/views/clinic-panel/pages/add-clinic/clinic-services.ejs
@@ -31,7 +31,7 @@
             <div class="form-box">
               <div class="title">Diyaliz Tedavi Tipleri</div>
               <div class="form-group not-border checkbox">
-                <input class="form-check-input" type="checkbox" value="Hemodiyaliz" name="dialysisType" id="dialysisType" checked />
+                <input class="form-check-input" type="checkbox" value="Hemodiyaliz" name="dialysisType" id="dialysisType" disabled checked />
                 <label class="form-check-label selected" for="dialysisType"> Hemodiyaliz </label>
               </div>
               <div class="form-group not-border checkbox">
