--- a/src/views/clinic-panel/pages/add-clinic/company-information.ejs
+++ b/src/views/clinic-panel/pages/add-clinic/company-information.ejs
@@ -66,7 +66,7 @@
             </div>
             <div class="tm-text-info">Merkezin sizin olduğunu doğrulayabilmemiz için bu bilgilerin doğru ve eksiksiz girildiğinden emin olun.</div>
             <div class="tm-button-next left">
-              <a href="/panel/choose-center"
+              <a href="/panel/choose-center-view"
                 ><button type="button" class="btn btn-outline-secondary">
                   <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="#025c91" class="bi bi-chevron-left" viewBox="0 0 16 16">
                     <path fill-rule="evenodd" d="M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z" />
