--- a/src/views/clinic-panel/partials/panel-navbar.ejs
+++ b/src/views/clinic-panel/partials/panel-navbar.ejs
@@ -73,7 +73,7 @@
         </div>
       </li>
       <li class="nav-item ms-auto name">Ayhan Fırat Fındıkoğlu</li>
-      <li class="nav-item ms-auto">Çıkış Yap</li>
+      <li class="nav-item ms-auto"><a href="/panel/logout">Çıkış Yap</a></li>
       <li class="nav-item dropdown d-none d-lg-block user-dropdown">
         <a class="nav-link" id="UserDropdown" href="#" data-bs-toggle="dropdown" aria-expanded="false"> <img class="img-xs rounded-circle" src="../clinic-panel/images/profiles/Profile1.png" alt="Profile image" /> </a>
         <div class="dropdown-menu dropdown-menu-right navbar-dropdown" aria-labelledby="UserDropdown">
