--- a/public/user/css/style.css
+++ b/public/user/css/style.css
@@ -1,11 +1,11 @@
+@import url("https://fonts.googleapis.com/css2?family=Khula&family=Lato&family=Montserrat&family=Roboto&display=swap");
 body {
-  font-family: "Open Sans", Helvetica, Arial, sans-serif;
+  font-family: "Gilroy", sans-serif; 
   font-size: 14px;
   font-weight: 400;
   overflow-x: hidden;
   background-color: #f5f9fc;
 }
-
 a,
 button {
   transition: all 0.3s ease;
