--- a/src/views/user/pages/register.ejs
+++ b/src/views/user/pages/register.ejs
@@ -60,11 +60,11 @@
               </div>
               <div class="form-box">
                 <div class="form-group not-border checkbox">
-                  <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked />
+                  <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked required />
                   <label class="form-check-label selected" for="flexCheckChecked"> Evet, lütfen beni Dialysing.com'daki seyahat fırsatları, ipuçları ve yeni özellikler hakkında bilgilendirin </label>
                 </div>
                 <div class="form-group not-border checkbox">
-                  <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" />
+                  <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" required />
                   <label class="form-check-label" for="flexCheckChecked"> Şartlar ve Koşullar, Gizlilik Politikası ve Kişisel Verilerin İşlenmesine İlişkin Onay'ı okudum ve kabul ediyorum. </label>
                 </div>
               </div>
