--- a/src/views/user/pages/clinic/clinic-list.ejs
+++ b/src/views/user/pages/clinic/clinic-list.ejs
@@ -343,8 +343,8 @@
 
           <% list.forEach(element => { %>
           <div class="clinic-center-box">
-            <!-- <img src="http://www.trhastane.com/resim/buyuk/ozel-kurtkoy-diyaliz-merkezi-10993.jpg" alt="Clinic Center iii" class="clinic-img" /> -->
-            <img src="../user/img/clinic/centers/clinic-ix.png" alt="Clinic Center iii" class="clinic-img" />
+            <!-- <img src="../user/img/clinic/centers/clinic-ix.png" alt="Clinic Center iii" class="clinic-img" /> -->
+            <img src="<%- element.companyInformation.photo[0] %>" alt="Clinic Center iii" class="clinic-img" />
             <div class="clinic-center-main-content">
               <div class="clinic-center-box-content">
                 <div class="clinic-center-info">
