--- a/src/views/user/pages/clinic/clinic-main.ejs
+++ b/src/views/user/pages/clinic/clinic-main.ejs
@@ -16,7 +16,7 @@
             <div class="inner-content">
               <div class="tm-header-title">Ücretsiz olarak kliniğinizi sistemimize dahil ederek bizler ile çalışmak ister misiniz?</div>
               <div class="tm-header-text">Sizlerde kliniğinizi sistemimize dahil ederek Dialysing.com ailesine katılıp, hastalarınıza direkt hizmet vermeye başlayabilirsiniz.</div>
-              <div class="tm-header-bottom"><a href="../register/register.html" class="btn-second">Merkezinizi Ekleyin</a></div>
+              <div class="tm-header-bottom"><a href="/panel/choose-personel" class="btn-second">Merkezinizi Ekleyin</a></div>
             </div>
           </div>
           <div class="col-sm-12 col-md-12 col-lg-4 col-xl-4 ie-container-width-fix text-right tm-header-content">
