--- a/src/views/clinic-panel/pages/add-clinic/choose-center.ejs
+++ b/src/views/clinic-panel/pages/add-clinic/choose-center.ejs
@@ -25,7 +25,7 @@
       <div class="tm-section-title">Merkezinizin Adı Nedir?</div>
       <div class="row">
         <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6">
-          <form class="tm-form-wide" action="/panel/choose-center-get-clinic-list" method="POST" onkeydown="return event.key != 'Enter';">
+          <form class="tm-form-wide" action="/panel/choose-center-get-clinic-list" method="POST">
             <div class="form-group">
               <label for="center-name">Merkezin Adını Girin</label>
               <input type="text" class="form-control" id="companyName" name="companyName" placeholder="Şirket adını giriniz" />
@@ -42,7 +42,7 @@
             </div>
 
             <% }) %>
-                        <div class="tm-button-next left">
+            <div class="tm-button-next left">
               <a href="/panel/choose-personel"
                 ><button type="button" class="btn btn-outline-secondary">
                   <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="#025c91" class="bi bi-chevron-left" viewBox="0 0 16 16">
@@ -53,8 +53,8 @@
             </div>
             <% } else { %>
             <div class="tm-text-info">Girdiğiniz isimle kayıtlı merkez bulunmamaktadır. Yeni diyaliz merkezi kaydı için tıklayınız..</div>
-             
-            <% } %> 
+
+            <% } %>
           </form>
           <% } %>
         </div>
@@ -76,3 +76,5 @@
     </div>
   </div>
 </div>
+
+
