--- a/src/views/clinic-panel/partials/panel-navbar.ejs
+++ b/src/views/clinic-panel/partials/panel-navbar.ejs
@@ -72,6 +72,11 @@
           </a>
         </div>
       </li>
+
+      <li class="nav-item buttons">
+        <a href="/panel/choose-personel" key="addCenter" class="nav-link btn-third">Merkezinizi Ekleyin</a>
+      </li>
+
       <li class="nav-item ms-auto name">Ayhan Fırat Fındıkoğlu</li>
       <li class="nav-item ms-auto"><a href="/panel/logout">Çıkış Yap</a></li>
       <li class="nav-item dropdown d-none d-lg-block user-dropdown">
