added links on index page

--- a/src/views/user/pages/index.ejs
+++ b/src/views/user/pages/index.ejs
@@ -430,7 +430,7 @@
       <div class="col-lg p-3">
         <div key="addTitle" class="tm-section-title">Ücretsiz olarak kliniğinizi sistemimize dahil ederek bizler ile çalışmak ister misiniz?</div>
         <div key="addText" class="tm-text">Sizlerde kliniğinizi sistemimize dahil ederek <span>Dialysing.com</span> ailesine katılıp, hastalarınıza direkt hizmet vermeye başlayabilirsiniz.</div>
-        <div><a href="./clinic/addCenterMainPage.html" key="addCenterDialys" class="btn-second">Diyaliz Merkezinizi Ekleyin</a></div>
+        <div><a href="/clinic" key="addCenterDialys" class="btn-second">Diyaliz Merkezinizi Ekleyin</a></div>
       </div>
       <div class="col-md">
         <img src="../user/img/custom/clinic-page.png" alt="Clinic Page" class="tm-width-100" />
@@ -491,7 +491,7 @@
       <div class="col-sm-12 col-md-6 col-lg-6 col-xl-6 mt-2">
         <div class="form-group bottom blue-input text-center">
           <input name="check-in" type="text" class="form-control" id="inputCheckIn" placeholder="dialysing@demo.com.tr" />
-          <img src=".../user/img/icons/arrow.png" class="mt-0" alt="Icon Arrow" />
+          <img src="../user/img/icons/arrow.png" class="mt-0" alt="Icon Arrow" />
         </div>
       </div>
     </div>
