--- a/src/views/user/partials/index-navbar.ejs
+++ b/src/views/user/partials/index-navbar.ejs
@@ -3,8 +3,8 @@
     <!-- Top Navbar -->
     <div class="container">
       <div class="row">
-        <nav class="navbar navbar-expand-lg narbar-light mt-3">
-          <a class="navbar-brand logo" href="#">Dialysing<span>.com</span></a>
+        <nav class="navbar navbar-expand-lg narbar-light mt-5">
+          <a class="navbar-brand logo mt-2 mb-3" href="#">Dialysing<span>.com</span></a>
           <a href="#" class="location mx-1"><i class="bi bi-geo-alt-fill" type="button" class="btn btn-outline-white mx-0" data-bs-toggle="modal" data-bs-target="#staticBackdrop"></i> <span id="location"></span></a>
           <!-- Location Modal -->
           <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
@@ -63,31 +63,27 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div id="mainNav" class="collapse navbar-collapse">
-            <ul class="navbar-nav ml-auto">
-              <img key="flag" src="../user/img/flags/turkey.png" alt="Flags Turkey" />
-              <div class="dropdown select-lang">
+            <ul class="navbar-nav ml-auto"> 
+              <div class="dropdown select-lang mt-2 mb-3">
+                <img key="flag" src="../user/img/flags/turkey.png" alt="Flags Turkey" />
                 <button class="btn btn-secondary dropdown-toggle" type="button" id="drop_yazı" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Türkçe</button>
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                  <a class="dropdown-item" id="tr" href="#"
-                    ><div class="input-group select-lang mb-2"><img key="flag" src="../user/img/flags/turkey.png" class="mx-1" alt="Flags Turkey" />Türkçe</div></a
-                  >
-                  <a class="dropdown-item" id="en" href="#"
-                    ><div class="input-group select-lang mb-2"><img key="flag" src="../user/img/flags/en.png" class="mx-1" alt="Flags Turkey" />English</div></a
-                  >
+                  <a class="dropdown-item" id="tr" href="#"><div class="input-group select-lang mb-2"><img key="flag" src="../user/img/flags/turkey.png" class="mx-1" alt="Flags Turkey" />Türkçe</div></a>
+                  <a class="dropdown-item" id="en" href="#"><div class="input-group select-lang mb-2"><img key="flag" src="../user/img/flags/en.png" class="mx-1" alt="Flags Turkey" />English</div></a>
                 </div>
               </div>
-              <li class="nav-item question">
+              <li class="nav-item question mt-2 mb-3">
                 <img src="../user/img/icons/question.png" alt="Icons Question" />
               </li>
-              <li class="nav-item buttons">
+              <li class="nav-item buttons mt-2 mb-3">
                 <a href="./clinic" key="addCenter" class="nav-link btn-third">Merkezinizi Ekleyin</a>
               </li>
               <% if (!user) { %>
-              <li class="nav-item buttons">
+              <li class="nav-item buttons mt-2 mb-3">
                 <a href="./register/register.html" key="register" class="nav-link btn-second">Kayıt Ol</a>
               </li>
               <% } %>
-              <li class="nav-item buttons">
+              <li class="nav-item buttons mt-2 mb-3">
                 <!-- Button trigger modal -->
                 <% if (!user) { %>
                 <button type="button" key="login" class="nav-link btn-second" data-toggle="modal" data-target="#loginModal">Giriş Yap</button>
