modified style on index page sections

--- a/src/views/user/pages/index.ejs
+++ b/src/views/user/pages/index.ejs
@@ -424,7 +424,7 @@
 </div>
 
 <!--======= ADD CENTER =====-->
-<div id="section-viii" class="tm-section-gradient tm-p my-5">
+<div id="section-viii" class="tm-section-gradient tm-p py-5 my-5">
   <div class="container">
     <div class="row align-items-center justify-content-between">
       <div class="col-lg p-3">
@@ -440,12 +440,12 @@
 </div>
 
 <!--======= GROW =====-->
-<div id="section-ix" class="tm-p">
+<div id="section-ix" class="tm-p py-5 my-5">
   <div class="container">
     <div class="row">
       <div class="col text-center">
         <h2 key="growTitle" class="tm-section-title">Güveninizle büyüyoruz!</h2>
-        <p key="growText" class="tm-text tm-font-semibold">
+        <p key="growText" class="tm-text tm-font-semibold px-5 pr-5">
           40+ ülkede yer alan 10000’nin üzerinde diyaliz merkezi ve kliniğinde, 20+ dilde hizmet alarak kolayca ve güvenli şekilde diyaliz rezervasyonunuzu <span class="tm-color-second tm-font-semibold">Dialysing<span class="tm-color-primary">.com</span></span> ile yapabilirsiniz
         </p>
         <div class="tm-center">
