--- a/public/user/css/style.css
+++ b/public/user/css/style.css
@@ -1023,11 +1023,9 @@ select.form-control {
 .tm-section-title {
   color: #28353e;
   font-size: 24px;
-  font-weight: 700;
-  /* line-height: 50px; */
-  /* width: 100%; */
-  /* border-bottom: 1px solid rgba(0, 0, 0, 0.09); */
+  font-weight: 700; 
   margin-bottom: 1rem;
+  font-family: 'Lato', sans-serif;
 }
 .tm-section-title-2 {
   font-size: 20px;
@@ -1046,11 +1044,14 @@ select.form-control {
   font-size: 16px;
   margin-bottom: 1.5rem;
   line-height: 30px;
+  font-family: 'Lato', sans-serif;
 }
 
 .tm-text-white {
   font-size: 16px;
-  color: #ffffff;
+  color: #fff;
+  font-family: 'Lato', sans-serif;
+  line-height: 2rem;
 }
 
 .tm-text-white.subscribe {
@@ -1164,7 +1165,8 @@ select.form-control {
 .tm-box-title {
   color: #ffffff;
   font-weight: bold;
-  font-size: 24px; 
+  font-size: 25px; 
+  font-family: 'Lato', sans-serif;
 }
 .tm-box-title a{
   text-decoration: none;
@@ -1182,6 +1184,7 @@ select.form-control {
   color: #28353e;
   opacity: 0.4;
   height: 155px;
+  font-family: 'Lato', sans-serif;
 }
 
 .tm-box-with-content .tm-profile {
@@ -1193,25 +1196,23 @@ select.form-control {
 .tm-box-with-content .tm-personal-info {
   padding-left: 1rem;
 }
-
 .tm-box-with-content .tm-name {
   color: #28353e;
+  font-family: 'Lato', sans-serif;
 }
-
 .tm-box-with-content .tm-city {
   color: #000000;
   opacity: 0.3;
 }
-
 .tm-box-with-content img {
   width: 50px;
   height: 50px;
 }
-
 .tm-box-text {
   color: #ffffff;
+  font-family: 'Lato', sans-serif;
+  font-size: 15px;
 }
-
 .tm-box-small {
   width: 100%;
   height: 120px;
@@ -1557,7 +1558,11 @@ select.form-control {
 .tm-form-small input[type="date" i] {
   font-size: 12px;
 }
-
+.point {
+  font-family: 'Lato', sans-serif;
+  font-weight: 500;
+  font-size: 16px; 
+}
 .tm-form-small input[type="date"]::-webkit-inner-spin-button,
 .tm-form-small input[type="date"]::-webkit-calendar-picker-indicator {
   background: transparent;
@@ -1770,9 +1775,10 @@ select.form-control {
   font-size: 13px;
   text-align: right;
 }
-/* footer {
+footer {
   font-size: 14px;
-} */
+  font-family: 'Lato', sans-serif;
+}
 
 /* footer .top {
   align-items: baseline;
