--- a/src/views/clinic-panel/pages/panel/index.ejs
+++ b/src/views/clinic-panel/pages/panel/index.ejs
@@ -3,7 +3,7 @@
     <div id="section-i" class="tm-p">
       <div class="row">
         <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6">
-          <div class="tm-section-title">Türkmed Diyaliz Merkezi</div>
+          <div class="tm-section-title"><%- center.companyInformation.companyName  %> </div>
           <div class="tm-space-between">
             <div class="tm-display-flex">
               <img src="../user/img/icons/location-blue.png" class="tm-margin-r-10" alt="Location Icon" />
