--- a/src/views/clinic-panel/partials/panel-navbar.ejs
+++ b/src/views/clinic-panel/partials/panel-navbar.ejs
@@ -14,15 +14,18 @@
     <ul class="navbar-nav">
       <li class="nav-item font-weight-semibold d-none d-lg-block ms-0">
         <div class="tm-form-element tm-form-element-2">
-          <select name="dialysis-center" class="form-control tm-select" id="dialysis-center">
-            <option value="">Türkmed Diyaliz Merkezi</option>
-            <option value="1">Türkmed Diyaliz Merkezi</option>
-            <option value="2">Türkmed Diyaliz Merkezi</option>
+          <select name="dialysisCenter" class="form-control tm-select" id="dialysisCenter"  onchange="changeCenter()">
+            <% user.centerList.forEach(center => { %>
+              <option value="<%- center._id  %> "><%- center.companyInformation.companyName  %> </option>
+            <% }) %>
           </select>
         </div>
       </li>
     </ul>
     <ul class="navbar-nav ms-auto">
+      <li>
+        <%- user.priceCount  %> 
+      </li>
       <li class="nav-item language">
         <img src="../user/img/flags/turkey.png" alt="Flags Turkey" />
         <div class="tm-form-element tm-form-element-2">
@@ -77,7 +80,7 @@
         <a href="/panel/choose-personel" key="addCenter" class="nav-link btn-third">Merkezinizi Ekleyin</a>
       </li>
 
-      <li class="nav-item ms-auto name">Ayhan Fırat Fındıkoğlu</li>
+      <li class="nav-item ms-auto name"><%- user.nameSurname  %> </li>
       <li class="nav-item ms-auto"><a href="/panel/logout">Çıkış Yap</a></li>
       <li class="nav-item dropdown d-none d-lg-block user-dropdown">
         <a class="nav-link" id="UserDropdown" href="#" data-bs-toggle="dropdown" aria-expanded="false"> <img class="img-xs rounded-circle" src="../clinic-panel/images/profiles/Profile1.png" alt="Profile image" /> </a>
@@ -100,3 +103,10 @@
     </button>
   </div>
 </nav>
+
+
+<script>
+  function changeCenter(){
+    window.location.replace("/panel?clinic="+document.getElementById("dialysisCenter").value);  
+  }
+</script>
