changing filter section on clinic list page

--- a/src/views/user/pages/clinic/clinic-list.ejs
+++ b/src/views/user/pages/clinic/clinic-list.ejs
@@ -333,7 +333,7 @@
                 <div class="btn-forth">Mesafeye Göre</div>
               </div>
               <div class="col-sm-12 col-md-12 col-lg-3 col-xl-3">
-                <div class="btn-forth">Mesafeye Göre</div>
+                <div class="btn-forth">Puanlamaya Göre</div>
               </div>
               <div class="col-sm-12 col-md-12 col-lg-3 col-xl-3">
                 <div class="btn-forth">Toplam Yorum Sayısı</div>
