--- a/src/views/user/partials/index-navbar.ejs
+++ b/src/views/user/partials/index-navbar.ejs
@@ -76,11 +76,11 @@
                 <img src="../user/img/icons/question.png" alt="Icons Question" />
               </li>
               <li class="nav-item buttons mt-2 mb-3">
-                <a href="./clinic" key="addCenter" class="nav-link btn-third">Merkezinizi Ekleyin</a>
+                <a href="/clinic" key="addCenter" class="nav-link btn-third">Merkezinizi Ekleyin</a>
               </li>
               <% if (!user) { %>
               <li class="nav-item buttons mt-2 mb-3">
-                <a href="./register/register.html" key="register" class="nav-link btn-second">Kayıt Ol</a>
+                <a href="/register" key="register" class="nav-link btn-second">Kayıt Ol</a>
               </li>
               <% } %>
               <li class="nav-item buttons mt-2 mb-3">
