--- a/src/views/user/partials/top-navbar-dark.ejs
+++ b/src/views/user/partials/top-navbar-dark.ejs
@@ -3,7 +3,7 @@
   <div class="container">
     <div class="row">
       <nav class="navbar navbar-expand-lg narbar-light mt-3 mb-3">
-        <a class="navbar-brand logo mb-2" href="../index.html"> Dialysing<span>.com</span></a>
+        <a class="navbar-brand logo mb-2" href="/"> Dialysing<span>.com</span></a>
         <a href="#" class="location mx-1"><i class="bi bi-geo-alt-fill" type="button" class="btn btn-outline-white mx-0" data-bs-toggle="modal" data-bs-target="#staticBackdrop"></i> <span id="location"></span></a>
         <!-- Location Modal -->
         <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
@@ -77,7 +77,7 @@
               <img src="../user/img/icons/question.png" alt="Icons Question" />
             </li>
             <li class="nav-item buttons mb-3">
-              <a href="../clinic/addCenterMainPage.html" class="nav-link btn-third">Merkezinizi Ekleyin</a>
+              <a href="/clinic" class="nav-link btn-third">Merkezinizi Ekleyin</a>
             </li>
             <li class="nav-item buttons mb-3">
               <a href="#" class="nav-link btn-second">Kayıt Ol</a>
