--- a/public/user/css/clinic/clinic.css
+++ b/public/user/css/clinic/clinic.css
@@ -1,7 +1,8 @@
+@import url("https://fonts.googleapis.com/css2?family=Khula&family=Lato&family=Montserrat&family=Roboto&display=swap");
+
 .tm-bg-background {
   height: 500px;
 }
-
 .tm-main-background {
   height: 585px;
   background-image: url(../../img/clinic/background-2.png);
@@ -42,10 +43,16 @@
 
 .clinic-header .inner-content .tm-header-title {
   font-size: 28px;
+  font-weight: 500;
+  font-family: 'Lato', sans-serif;
+  line-height: 3rem;
 }
 
 .clinic-header .inner-content .tm-header-text {
-  font-size: 20px;
+  font-size: 15px;
+  font-family: 'Lato', sans-serif;
+  font-weight: 300;
+  line-height: 1.5rem;
 }
 
 .clinic-header .inner-content .tm-header-bottom {
