--- a/src/views/user/partials/index-navbar.ejs
+++ b/src/views/user/partials/index-navbar.ejs
@@ -153,7 +153,8 @@
                   <img src="../user/img/icons/down.png" class="tm-form-element-icon-small icon-down dateicon" alt="Icon Down" />
                 </div>
                 <div class="form-group tm-form-element search">
-                  <button type="submit" class="btn btn-outline-primary"><i class="bi bi-search mx-2"></i> <span key="centerFind">Diyaliz Bul</span></button>
+                  <button type="submit" class="btn btn-outline-primary"><i class="bi bi-search mx-2"></i> 
+                    <span key="centerFind">Diyaliz Bul</span></button>
                 </div>
               </div>
             </form>
