--- a/src/views/user/pages/clinic/clinic-main.ejs
+++ b/src/views/user/pages/clinic/clinic-main.ejs
@@ -28,7 +28,7 @@
   </div>
 
   <!--======= CLINIC =====-->
-  <div id="section-i" class="tm-bg-white tm-pt-20 tm-pb-10">
+  <div id="section-i" class="tm-bg-white tm-pt-20 tm-pb-10 my-5 py-5 mt-5">
     <div class="container">
       <div class="row">
         <div class="col-sm-12 col-md-12 col-lg-12 col-xl-12">
