--- a/src/views/clinic-panel/pages/panel/promotions.ejs
+++ b/src/views/clinic-panel/pages/panel/promotions.ejs
@@ -5,13 +5,16 @@
         <div class="tm-section-title">Size Özel Promosyonlar</div>
         <div class="admin-inner-text">Size ve merkezinize özel 4 adet özel promosyon teklifimiz mevcut, hemen inceleyebilirsiniz.</div>
         <div class="promotion-dates">Temmuz-Ağustos-Eylül 2021 döneminde geçerlidir.</div>
+
+        <% promotions.forEach(promotion => { %>
+
         <div class="row">
           <div class="col-sm-12 col-md-12 col-lg-8 col-xl-8">
             <div class="tm-form-wide promotions">
               <div class="promotion-line">Son 5 gün 23 saat kalmıştır.</div>
               <div class="form-group radio small">
                 <label class="container"
-                  >Tüm Dünya
+                  ><%- promotion.area %>
                   <input type="radio" checked="checked" name="radio2" />
                   <span class="checkmark"></span>
                 </label>
@@ -19,17 +22,17 @@
               <div class="row">
                 <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 left">
                   <div class="tm-font-semibold">Merkezinizin Tahmini Görüntülenme Sayısı</div>
-                  <div class="tm-color-second tm-font-semibold tm-margin-1">250-500 Görüntülenme</div>
+                  <div class="tm-color-second tm-font-semibold tm-margin-1"><%- promotion.viewer %></div>
                   <div class="warning">Bu promosyon için kontenjan 500’dür. 300 Diyaliz Merkezi Bu Kampanyadan Yararlandı</div>
                 </div>
                 <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 right">
                   <div>
                     <div class="tm-font-semibold">Standart Fiyat</div>
-                    <div class="token-number old">15 Dialysis Token</div>
+                    <div class="token-number old"><%- promotion.token * 1.5 %></div>
                   </div>
                   <div>
                     <div class="tm-font-semibold tm-color-second">Size Özel Fiyat</div>
-                    <div class="token-number">10 Dialysis Token</div>
+                    <div class="token-number"><%- promotion.token %></div>
                   </div>
                 </div>
               </div>
@@ -37,121 +40,12 @@
           </div>
           <div class="col-sm-12 col-md-12 col-lg-4 col-xl-4">
             <div class="promotion-button">
-              <button class="btn-second">Promosyonu Satın Al</button>
+              <a href="/panel/buy-promotions/<%- promotion._id  %>" class="btn-second">Promosyonu Satın Al</a>
             </div>
           </div>
         </div>
-        <div class="promotion-dates">Temmuz-Ağustos-Eylül 2021 döneminde geçerlidir.</div>
-        <div class="row">
-          <div class="col-sm-12 col-md-12 col-lg-8 col-xl-8">
-            <div class="tm-form-wide promotions">
-              <div class="promotion-line">Son 5 gün 23 saat kalmıştır.</div>
-              <div class="form-group radio small">
-                <label class="container"
-                  >Belirli Bölge
-                  <input type="radio" checked="checked" name="radio2" />
-                  <span class="checkmark"></span>
-                </label>
-              </div>
-              <div class="row">
-                <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 left">
-                  <div class="tm-font-semibold">Merkezinizin Tahmini Görüntülenme Sayısı</div>
-                  <div class="tm-color-second tm-font-semibold tm-margin-1">250-500 Görüntülenme</div>
-                  <div class="warning">120 Diyaliz Merkezi Bu Kampanyadan Yararlandı</div>
-                </div>
-                <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 right">
-                  <div>
-                    <div class="tm-font-semibold">Standart Fiyat</div>
-                    <div class="token-number old">15 Dialysis Token</div>
-                  </div>
-                  <div>
-                    <div class="tm-font-semibold tm-color-second">Size Özel Fiyat</div>
-                    <div class="token-number">10 Dialysis Token</div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm-12 col-md-12 col-lg-4 col-xl-4">
-            <div class="promotion-button">
-              <button class="btn-second">Promosyonu Satın Al</button>
-            </div>
-          </div>
-        </div>
-        <div class="promotion-dates">Temmuz-Ağustos-Eylül 2021 döneminde geçerlidir.</div>
-        <div class="row">
-          <div class="col-sm-12 col-md-12 col-lg-8 col-xl-8">
-            <div class="tm-form-wide promotions">
-              <div class="promotion-line">Son 5 gün 23 saat kalmıştır.</div>
-              <div class="form-group radio small">
-                <label class="container"
-                  >Belirli Bölge <span>Tercih ettiğiniz 3 bölge veya ülkeyi seçebileceksiniz</span>
-                  <input type="radio" checked="checked" name="radio2" />
-                  <span class="checkmark"></span>
-                </label>
-              </div>
-              <div class="row">
-                <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 left">
-                  <div class="tm-font-semibold">Merkezinizin Tahmini Görüntülenme Sayısı</div>
-                  <div class="tm-color-second tm-font-semibold tm-margin-1">250-500 Görüntülenme</div>
-                  <div class="warning">120 Diyaliz Merkezi Bu Kampanyadan Yararlandı</div>
-                </div>
-                <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 right">
-                  <div>
-                    <div class="tm-font-semibold">Standart Fiyat</div>
-                    <div class="token-number old">15 Dialysis Token</div>
-                  </div>
-                  <div>
-                    <div class="tm-font-semibold tm-color-second">Size Özel Fiyat</div>
-                    <div class="token-number">10 Dialysis Token</div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm-12 col-md-12 col-lg-4 col-xl-4">
-            <div class="promotion-button">
-              <button class="btn-second">Promosyonu Satın Al</button>
-            </div>
-          </div>
-        </div>
-        <div class="promotion-dates">Temmuz-Ağustos-Eylül 2021 döneminde geçerlidir.</div>
-        <div class="row">
-          <div class="col-sm-12 col-md-12 col-lg-8 col-xl-8">
-            <div class="tm-form-wide promotions">
-              <div class="promotion-line">Son 5 gün 23 saat kalmıştır.</div>
-              <div class="form-group radio small">
-                <label class="container"
-                  >Anasayfa Önerilen Diyaliz Merkezleri
-                  <input type="radio" checked="checked" name="radio2" />
-                  <span class="checkmark"></span>
-                </label>
-              </div>
-              <div class="row">
-                <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 left">
-                  <div class="tm-font-semibold">Merkezinizin Tahmini Görüntülenme Sayısı</div>
-                  <div class="tm-color-second tm-font-semibold tm-margin-1">250-500 Görüntülenme</div>
-                  <div class="warning">120 Diyaliz Merkezi Bu Kampanyadan Yararlandı</div>
-                </div>
-                <div class="col-sm-12 col-md-12 col-lg-6 col-xl-6 right">
-                  <div>
-                    <div class="tm-font-semibold">Standart Fiyat</div>
-                    <div class="token-number old">15 Dialysis Token</div>
-                  </div>
-                  <div>
-                    <div class="tm-font-semibold tm-color-second">Size Özel Fiyat</div>
-                    <div class="token-number">10 Dialysis Token</div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm-12 col-md-12 col-lg-4 col-xl-4">
-            <div class="promotion-button">
-              <button class="btn-second">Promosyonu Satın Al</button>
-            </div>
-          </div>
-        </div>
+
+        <% }) %>
       </div>
     </div>
   </div>
