--- a/src/views/clinic-panel/partials/side-bar.ejs
+++ b/src/views/clinic-panel/partials/side-bar.ejs
@@ -21,8 +21,8 @@
       <a class="nav-link" data-bs-toggle="collapse" href="#opp-center" aria-expanded="false" aria-controls="opp-center"> <img src="../clinic-panel/images/icons/Star.png" alt="Star Icon" /><span class="menu-title">Fırsat Merkezi</span><i class="menu-arrow"></i> </a>
       <div class="collapse" id="opp-center">
         <ul class="nav flex-column sub-menu">
-          <li class="nav-item"><a class="nav-link" href="./visibility.html">Görünürlük Arttırma</a></li>
-          <li class="nav-item"><a class="nav-link" href="./promotions.html">Promosyon ve Fırsatlar</a></li>
+          <li class="nav-item"><a class="nav-link" href="/panel/visibility">Görünürlük Arttırma</a></li>
+          <li class="nav-item"><a class="nav-link" href="/panel/promotions">Promosyon ve Fırsatlar</a></li>
         </ul>
       </div>
     </li>
